<resources>
    <string name="app_name">NetHunter</string>
    <string name="app_nav_home_label">NetHunter</string>
    <string name="home_title">System Information</string>
    <string name="nethunter_description">Welcome to Kali Linux NetHunter by Offensive Security! This application is designed to make it easier to execute attacks and control services. The navigation menu contains links to useful commands, settings, macros, and attack configuration pages. Most configurations work out of the box but some may require some minimal tweaking.</string>
    <string name="nethunter_interface_heading">Network Interfaces</string>
    <string name="nethunter_external_ip_heading">External IP</string>
    <string name="nethunter_hid_heading">HID Interfaces</string>
    <string name="nethunter_busybox_title">Busybox Version</string>
    <string name="nethunter_kernel_heading">Kernel Version</string>
    <string name="nethunter_terminal_detect">Nethunter Terminal Status</string>
    <string name="kali_services_description">Various Kali network services can be started and stopped via the buttons in this part of the interface.</string>
    <string name="hid_powersploit_description">The Powersploit payload provides you a choice of reverse meterpreter HTTP/S payloads. "URL to payload" should be a URL accessible to the victim machine where the larger payload is downloaded to.</string>
    <string name="hid_windows_cmd_description">This Windows CMD payload allows you to enter raw commands to a Windows command prompt. Hitting the list menu will allow you to choose keyboard layout or UAC bypass options. </string>
    <string name="badusb_label">BadUSB MITM Attack</string>
    <string name="badusb_description">This is our implementation of the BadUSB attack as demonstrated at Black Hat USA 2014. Enabling this USB gadget mode will allow your device to act as a USB network interface when plugged into a target computer. Connecting the USB cable to a PC will force all traffic from that PC (Windows or Linux) through the NetHunter device, where the traffic can be MITM\'ed.</string>
    <string name="mana_hostapd">The hostapd configuration file used by Mana.</string>
    <string name="mana_hostapd_wpe">The hostapd configuration file used for 802.1x/EAP authentication attack (hostapd-wpe)  This is not used with MANA.</string>
    <string name="mana_hostapd_wpe_certs">Generate certificates (1st time only)</string>
    <string name="mana_dhcpd">The dhcpd configuration file used by Mana.</string>
    <string name="mana_dnsspoof">The dnsspoof configuration file used by Mana.</string>
    <string name="mana_nat_full">The Mana script that does full NAT &amp; SSL interception.</string>
    <string name="mana_nat_simple">The Mana script that does full NAT only.</string>
    <string name="mana_nat_simple_bdf">The Mana script that does full NAT &amp; BDFProxy HTTP routing to port 8080.</string>
    <string name="bdfproxy_cfg">The configuration file for BDFProxy.</string>
    <string name="mana_bettercap_description">Route traffic to bettercap proxy with Mana-toolkit</string>
    <string name="hostapd_private_key">Private Key Password</string>
    <string name="select_language">Language</string>
    <string name="duckConvertAttack">Attack</string>
    <string name="duck_hunter_headline">The DuckHunter script can easily convert "USB Rubber Ducky" scripts into NetHunter HID format.  You can generate preconfigured scripts at the incredibly useful <a href="http://www.ducktoolkit.com/Home.jsp">Ducky Toolkit</a> site, or check out the Rubber Ducky script syntax from the official <a href="https://github.com/hak5darren/USB-Rubber-Ducky/wiki/Duckyscript">README</a></string>
    <string-array name="duckhunter_preset_array">
        <item>Select preset</item>
        <item>Hello World</item>
        <item>OSX Perl Reverse Shell</item>
        <item>OSX Ruby Reverse Shell</item>
    </string-array>
    <string name="payload_select">Please select</string>
    <string-array name="payloads">
        <item>windows/meterpreter/reverse_http</item>
        <item>windows/meterpreter/reverse_https</item>
    </string-array>
    <string name="source">Edit source</string>
    <string name="start_mitmf">Start MITMf attack</string>
    <string name="stop_mitmf">Stop MITMf attack</string>
    <string name="start_badusb">Start BadUSB attack</string>
    <string name="stop_badusb">Stop BadUSB attack</string>
    <string name="launch_kali_menu">Launch Kali Menu in Terminal</string>
    <string name="launch_kali_shell">Launch Kali Shell in Terminal</string>
    <string name="launch_wifite">Launch Wifite</string>
    <string name="update_kali_chroot">Update Kali chroot</string>
    <string name="turn_off_external_wifi">Turn Off External Wifi</string>
    <string name="kali_dumpmifare">Dump Mifare</string>
    <string name="update">Update</string>
    <string name="load">Load from SDCARD</string>
    <string name="save">Save to SDCARD</string>
    <string name="execute_attack">Execute Attack</string>
    <string name="stop_mana">Stop mana</string>
    <string name="start_mana">Start mana</string>
    <string name="bssid">BSSID</string>
    <string name="ssid">SSID</string>
    <string name="chanel">Channel</string>
    <string name="enable_karma">Enable karma</string>
    <string name="admin">UAC Bypass</string>
    <string name="choose_language">Keyboard Layout</string>
    <string name="reset_usb">Reset USB</string>
    <string name="iface">Interface</string>
    <string name="payload">Payload</string>
    <string name="loading_service">Loading service state</string>
    <string name="get_external_ip">Get external IP</string>
    <string name="karma_loud">karma loud</string>
    <string name="ps_ip_address">IP Address (LHOST)</string>
    <string name="ps_port">Port (LPORT)</string>
    <string name="ps_payload_url">URL to payload</string>
    <string name="toast_error_permissions">Nethunter App does not have permission to send to Nethunter terminal!</string>
    <string name="toast_install_terminal">Error launching intent. Install Android Terminal!</string>
    <string name="descriptiontext" />
    <string name="macchanger_description">MAC format: 00:11:22:ab:cd:ef </string>
    <string name="interface_select">Pick an interface:</string>
    <string name="macchanger_select">Select macchanger mode:</string>
    <string name="reset_mac">Reset wlan0 MAC address</string>
    <string name="currentmac">Current MAC:</string>
    <string name="TwoMACDigits">XX</string>
    <string name="macSeparator">:</string>
    <string name="changeMAC">Change MAC</string>
    <string name="reloadMAC">Reload MAC</string>
    <string name="randomMAC">Random MAC</string>
    <string name="customMAC">Custom MAC</string>
    <string name="autorunningscripts">Nethunter: auto-running startup scripts</string>
    <string name="toastForNoBusybox">Uh oh!  Nethunter can\'t find busybox!</string>
    <string-array name="macchanger_opts">
        <item>Random MAC</item>
        <item>Custom MAC</item>
    </string-array>
    <string-array name="interface_opts">
        <item>wlan0 (Internal wireless card)</item>
        <item>wlan1 (External wireless card)</item>
        <item>eth0 (Ethernet)</item>
        <item>rndis0 (USB > Ethernet)</item>
        <item>usb0 (USB > Ethernet Nexus7 2013 when tethering | badusb)</item>
    </string-array>
    <string name="mitmf_description">Written by @byt3bl33d3r, MITMf aims to provide a one-stop-shop for Man-In-The-Middle and network attacks while updating and improving existing attacks and techniques.</string>
    <string-array name="mitmf_interface_array">
        <item>wlan0</item>
        <item>wlan1</item>
        <item>eth0</item>
        <item>rndis0</item>
        <item>usb0</item>
    </string-array>
    <string name="mitmf_javascriptkeylogger">JavaScript Keylogger</string>
    <string name="mitmf_browserprofiler">Browser Profiler</string>
    <string name="mitmf_filepwn">FilePWN (BDFPROXY) </string>
    <string name="mitmf_beefautorun">BeEEF Autorun</string>
    <string name="mitmf_smbauth">SMB challenge-response auth attempts</string>
    <string name="mitmf_sslstripplus">SSLStrip+</string>
    <string name="mitmf_appcache">App Cache Poison</string>
    <string name="mitmf_upsidedown">Enable Upsidedowninternet</string>
    <string name="mitmf_FERRETNG">Enable Ferret-NG Cookie Capture Plugin</string>
    <string name="mitmf_Responder_Description">Responder allows you to poison LLMNR, NBT-NS and MDNS requests</string>
    <string name="mitmf_Responder">Enable Responder Plugin</string>
    <string name="mitmf_Responder_Analyze">Enable Analyze</string>
    <string name="mitmf_Responder_Wredir">Enable Wredir</string>
    <string name="mitmf_Responder_NBTNS">Enable NBTNS</string>
    <string name="mitmf_Responder_Fingerprint">Fingerprint Host</string>
    <string name="mitmf_Responder_LM">Force LM hash downgrade</string>
    <string name="mitmf_Responder_WPAD">WPAD Rogue Proxy Server</string>
    <string name="mitmf_spoof">Enable Spoof Plugin (redirect/modify traffic)</string>
    <string-array name="mitmf_spoof_type">
        <item>Select redirect type</item>
        <item>ARP</item>
        <item>ICMP</item>
        <item>DHCP</item>
        <item>DNS</item>
    </string-array>
    <string name="mitmf_spoof_shellshock">Exploit shellshock (only with dhcp spoofing)</string>
    <string name="mitmf_spoof_gateway">Gateway IP </string>
    <string name="mitmf_spoof_targets">Target(s)</string>
    <string-array name="mitmf_spoof_arpmode">
        <item>Select ARP mode</item>
        <item>Requests</item>
        <item>Reply</item>
    </string-array>
    <string name="mitmf_screenshotter">Enable ScreenShotter Plugin</string>
    <string name="mitmf_screenshotter_interval">Interval (in seconds) to screenshot:</string>
    <string name="mitmf_inject">Enable Inject Plugin</string>
    <string name="mitmf_inject_JS">Javascript payload URL</string>
    <string name="mitmf_inject_HTML">HTML payload URL</string>
    <string name="mitmf_inject_HTMLPAY">HTML Payload to inject:</string>
    <string name="mitmf_inject_MATCH">Match String:</string>
    <string name="mitmf_inject_PRESERVER">Preserve Cache</string>
    <string name="nmap_hint">Ex: scanme.nmap.org, 192.168.0.1; 10.0.0–255.1&#8211;254</string>
    <string name="nmap_all">Enable OS version detect, script scan, and traceroute</string>
    <string name="nmap_ipv6">Enable IPv6</string>
    <string name="nmap_timing_template">Timing Template</string>
    <string name="nmap_ports">Enter custom ports</string>
    <string name="nmap_fastmode">Fast mode (fewer ports)</string>
    <string name="nmap_dontrandomize">Don\'t randomize port scan</string>
    <string name="nmap_topports">Top 20 Ports</string>
    <string name="nmap_osdetectenable">Enable OS detection</string>
    <string name="nmap_servicedetect">Service/Version Detection</string>
    <string name="nmap_hostdiscovery_ping">Ping Scan</string>
    <string name="nmap_scan_technique">Scan Techniques</string>
    <string name="nmap_udpscan">UDP Scan</string>
    <string name="scanButtonText">Scan</string>
    <string name="advancedOptionsSwitchText">Advanced Options</string>
    <string name="nmap_open">Report only open ports</string>
    <string name="mana_edit_files_title">Edit Mana Files</string>
    <string name="dhcpd_conf">DHCPD Configuration</string>
    <string name="dnsspoof_conf">DNSSpoof Configuration</string>
    <string name="nat_full_script">NAT-Full Script</string>
    <string name="nat_simple_script">NAT-Simple Script</string>
    <string name="nat_bettercap_script">NAT-Bettercap Script</string>
    <string name="bdfproxy_configuration">BDFProxy Configuration</string>
    <string name="service_status_switch_down">DOWN</string>
    <string name="service_status_switch_up">UP</string>
    <string name="service_start_at_boot">Start at boot</string>
</resources>