<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.offsec.nethunter.NmapViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/nmap_textinput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nmap_searchbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="IP or range to scan" />
            </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/nmap_scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanButtonText" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:text="@string/nmap_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <Switch
            android:id="@+id/nmap_adv_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/advancedOptionsSwitchText"
            android:textAlignment="center"
            android:onClick="@{(view)->viewModel.advChecked(view)}"
            android:checked="false" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.showAdvanced ? View.VISIBLE : View.GONE}"
            tools:visibility="gone">

        <LinearLayout
            android:id="@+id/nmap_adv_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="1">

            <Spinner
                android:id="@+id/nmap_int_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingBottom="10dp" />

            <CheckBox
                android:id="@+id/nmap_all_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nmap_all" />

            <CheckBox
                android:id="@+id/nmap_ping_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nmap_hostdiscovery_ping" />

            <CheckBox
                android:id="@+id/nmap_SV_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nmap_servicedetect" />

            <CheckBox
                android:id="@+id/nmap_osonly_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/nmap_osdetectenable" />

            <CheckBox
                android:id="@+id/nmap_ipv6_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nmap_ipv6" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nmap_ports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nmap_ports"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:id="@+id/nmap_top_ports_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nmap_topports" />

            <CheckBox
                android:id="@+id/nmap_fastmode_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nmap_fastmode" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nmap_dontrandomize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/nmap_timing_template"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/nmap_timing_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/nmap_scan_technique"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/nmap_scan_tech_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/nmap_udp_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nmap_udpscan" />

            <CheckBox
                android:id="@+id/nmap_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nmap_open" />

            <Space
                android:layout_width="1dp"
                android:layout_height="30dp" />


        </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/nmap_output"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:padding="8dp"
            android:text="Nmap Output..."
            android:visibility="@{viewModel.showOutput ? View.VISIBLE : View.GONE}" />
</LinearLayout>
</layout>