<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.offsec.nethunter.MITMFViewModel" />
    </data>

    <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mitmf_description"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center"
            android:padding="4dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Interface"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white" />

                <Spinner
                    android:id="@+id/mitmf_interface"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="General Settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <ImageView
                android:paddingTop="10px"
                android:paddingBottom="5px"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:src="@android:drawable/divider_horizontal_bright" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_javascriptkeylogger"
                android:id="@+id/mitmf_jskey"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_FERRETNG"
                android:id="@+id/mitmf_ferretng"
                android:checked="false"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_browserprofiler"
                android:id="@+id/mitmf_browserprofile"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_filepwn"
                android:id="@+id/mitmf_filepwn"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_smbauth"
                android:id="@+id/mitmf_smb"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SMB trap"
                android:id="@+id/mitmf_smb_trap"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_sslstripplus"
                android:id="@+id/mitmf_sslstrip"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_appcache"
                android:id="@+id/mitmf_app_poison"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_upsidedown"
                android:id="@+id/mitmf_upsidedown"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <ImageView
                android:layout_gravity="center_horizontal"
                android:paddingTop="10px"
                android:paddingBottom="5px"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:src="@android:drawable/divider_horizontal_bright" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ScreenShotter"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white" />

            <ImageView
                android:paddingTop="10px"
                android:paddingBottom="5px"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:src="@android:drawable/divider_horizontal_bright" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitmf_screenshotter"
                android:id="@+id/mitmf_screenshotter"
                android:paddingTop="5dp"
                android:paddingBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/mitmf_screenshotter_interval"
                android:labelFor="@+id/mitmf_screen_interval" />

                <EditText
                    android:layout_width="91dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/mitmf_screen_interval"
                    android:maxLines="1" />

            <ImageView
                android:paddingTop="10px"
                android:paddingBottom="5px"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:src="@android:drawable/divider_horizontal_bright" />

    </LinearLayout>

</ScrollView>
</layout>